--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "pms-booking-push",
+  "name": "push-booking",
   "version": "1.0.0",
-  "main": "server.js",
+  "description": "A simple server to fetch and push booking data",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js"
   },
+  "keywords": [],
+  "author": "Your Name",
+  "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.0",
-    "express": "^4.18.2"
+    "axios": "^1.6.7",
+    "express": "^4.18.4"
   }
 }
