--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
-"main": "index.js",
-"scripts": {
-  "start": "node index.js"
+{
+  "name": "push-booking",
+  "version": "1.0.0",
+  "description": "Simple server to push bookings to PMS",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "axios": "^1.6.7",
+    "express": "^4.18.2"
+  }
 }
