--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "push-booking",
   "version": "1.0.0",
-  "description": "Simple server to push bookings to PMS",
+  "description": "Fetch and push hotel booking info",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "axios": "^1.6.7",
+    "axios": "^1.6.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2"
   }
 }
